--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,31 @@ canvas {
     margin-left: 20px;
 	display:block;
 }
+
+#loading {
+    position: absolute;
+    color: black;
+	text-align: center;
+    width:100%;
+    top: 50%;
+	display:block;
+}
+
+#aw {
+    position: absolute;
+    top: 10%;
+    bottom: 10%;
+    left: 35%;
+    right: 35%;
+    background-color: black;
+    visibility: hidden;
+}
+
+#awtext {
+    text-align: left;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    color: white;
+    visibility: hidden;
+}
